# pythonexo

./: .gitignore  README.md  coverage_badge.md  genindex.html  index.html  objects.inv  pyproject.toml  python.py  search.html  searchindex.js
.github/workflows/: doc.yaml  python-tests.yml
_sources/: index.rst.txt
source/: conf.py
tests/: test_.py
