[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "first steps into converting my python code into python project"
authors = ["AlexSaadeh <alexsaade.lb@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^8.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
